@@ -15,6 +15,7 @@ import it.gov.pagopa.reward.notification.repository.RewardsNotificationRepositor
 import it.gov.pagopa.reward.notification.rest.UserRestClient;
 import it.gov.pagopa.reward.notification.service.utils.ExportCsvConstants;
 import it.gov.pagopa.reward.notification.service.utils.Utils;
+import it.gov.pagopa.reward.notification.service.utils.ZipUtils;
 import it.gov.pagopa.reward.notification.test.fakers.RewardNotificationRuleFaker;
 import it.gov.pagopa.reward.notification.test.fakers.RewardsNotificationFaker;
 import lombok.SneakyThrows;
@@ -29,6 +30,7 @@ import org.springframework.test.context.TestPropertySource;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.Comparator;
@@ -261,13 +263,27 @@ class ExportCsvServiceIntegrationTest extends BaseIntegrationTest {
             Assertions.assertEquals(LocalDate.now(), r.getExportDate().toLocalDate());
         });
 
-        Path exportFile = Path.of("/tmp", export.getFilePath().replace(".zip", ".csv"));
-        Files.exists(exportFile);
-        try(Stream<String> lines = Files.lines(exportFile)){
-            Assertions.assertEquals(
-                    rewards.stream().map(RewardsNotification::getId).sorted().toList(),
-                lines.skip(1).map(l->csvUniqueIdGroupMatch.matcher(l).replaceAll("$1")).sorted().toList()
-            );
+        Path originalZipFile = Paths.get("/tmp", export.getFilePath());
+        Assertions.assertFalse(Files.exists(originalZipFile));
+
+        Path uploadedZipPath = Paths.get(originalZipFile.toString().replace(".zip", ".uploaded.zip"));
+        Assertions.assertTrue(Files.exists(uploadedZipPath));
+        Path csvPath = Paths.get(uploadedZipPath.toString().replace(".uploaded.zip", ".csv"));
+        Assertions.assertFalse(Files.exists(csvPath));
+
+        ZipUtils.unzip(uploadedZipPath.toString(), csvPath.getParent().toString());
+
+        try{
+            Assertions.assertTrue(Files.exists(csvPath));
+
+            try(Stream<String> lines = Files.lines(csvPath)){
+                Assertions.assertEquals(
+                        rewards.stream().map(RewardsNotification::getId).sorted().toList(),
+                        lines.skip(1).map(l->csvUniqueIdGroupMatch.matcher(l).replaceAll("$1")).sorted().toList()
+                );
+            }
+        } finally {
+            Files.delete(csvPath);
         }
     }
 
